@@ -134,7 +134,12 @@ function DocumentConversion(options) {
     }
     
     function convertUnderline(runHtml) {
-        return (options.convertUnderline || defaultConvertUnderline)(runHtml);
+        var style = findStyle({type: "underline"});
+        if (style) {
+            return Html.pathToNode(style.to, [runHtml]);
+        } else {
+            return runHtml;
+        }
     }
     
     function convertRunProperty(result, elementType, defaultTagName) {
@@ -143,15 +148,6 @@ function DocumentConversion(options) {
             return Html.pathToNode(style.to, [result]);
         } else {
             return wrapInNonFreshElement(result, defaultTagName);
-        }
-    }
-    
-    function defaultConvertUnderline(runHtml) {
-        var style = findStyle({type: "underline"});
-        if (style) {
-            return Html.pathToNode(style.to, [runHtml]);
-        } else {
-            return runHtml;
         }
     }
     
