@@ -284,13 +284,6 @@ describe('mammoth', function() {
         });
     });
     
-    test('underline can be configured with convertUnderline option', function() {
-        var docxPath = path.join(__dirname, "test-data/underline.docx");
-        return mammoth.convertToHtml({path: docxPath}, {convertUnderline: mammoth.underline.element("em")}).then(function(result) {
-            assert.equal(result.value, '<p><strong>The <em>Sunset</em> Tree</strong></p>');
-        });
-    });
-    
     test('underline can be configured with style mapping', function() {
         var docxPath = path.join(__dirname, "test-data/underline.docx");
         return mammoth.convertToHtml({path: docxPath}, {styleMap: "u => em"}).then(function(result) {
